<resources>
    <string name="app_name">AllMarket</string>
    <string name="btn_propietario">propietario</string>
    <string name="btn_cliente">cliente</string>
    <string name="btn_instagram">instagram</string>
    <string name="imagen_del_logo">descripcionLogo</string>
    <string name="registrate">Registrate</string>
    <string name="etq_visitante">Visitante</string>

    //Valores pantalla Registro Cliente
    <string name="textRegistroCliente">Cliente</string>
    <string name="textNombre">Nombre de Usuario</string>
    <string name="textContra">Contraseña</string>
    <string name="textTelefono">Teléfono</string>
    <string name="textCorreo">Correo Electrónico</string>
    <string name="textDireccion">Dirección de Residencia</string>
    <string name="btnConfirmarcliente">Confirmar</string>
    <string name="etq_planoEdicionNombreC">Digita tu nombre...</string>
    <string name="etq_planoEdicionTelefonoC">Digita tu número...</string>
    <string name="etq_planoEdicionCorreoC">Digita tu Correo...</string>
    <string name="etq_planoEdicionContraseniaC">Digita tu Contraseña...</string>
    <string name="etq_planoEdicionDireccionC">Digita tu Dirección...</string>

    //Valores pantalla Registro Propietario
    <string name="textRegistroPropietario">Propietario</string>
    <string name="textNombrePropietario">Nombre</string>
    <string name="textContraPropietario">Contraseña</string>
    <string name="textTelefonoPropietario">Telefono</string>
    <string name="textCorreoPropietario">Correo</string>
    <string name="textDireccionPropietario">Direccion</string>
    <string name="btnConfirmarPropietario">Confirmar</string>
    <string name="etq_planoEdicionNombreP">Digitá tu nombre...</string>
    <string name="etq_planoEdicionNumeroP">Digitá tu número...</string>
    <string name="etq_planoEdicionCorreoP">Digita tu Correo...</string>
    <string name="etq_planoEdicionContraseniaP">Digita tu Contraseña...</string>
    <string name="etq_planoEdicionDireccionP">Digita tu Dirección...</string>

    //Valores pantalla Inicio Sesión
    <string name="LbIniciarSesion">Iniciar Sesión</string>
    <string name="etq_planoEdicionCorreoI">Digitá tu correo...</string>
    <string name="etq_planoEdicionContraseniaI">Digitá tu contraseña...</string>

    //Pantalla prueba
    <string name="etq_texto">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>

    //Valores pantalla

</resources>