<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallaInicioSesion">

    <TextView
        android:id="@+id/txt_contraseniaI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textContra"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/txt_correoElectronicoI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCorreo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/txt_IniciarSesionI"
        android:layout_width="403dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/textRegistroCliente"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        tools:text="@string/LbIniciarSesion" />

    <EditText
        android:id="@+id/etxt_correoI"
        android:layout_width="387dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/etq_planoEdicionCorreoI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_IniciarSesionI"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/etxt_contraseniaI"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/etq_planoEdicionContraseniaI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Button
        android:id="@+id/btn_confirmarI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirmarcliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />
</androidx.constraintlayout.widget.ConstraintLayout>
